k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-consulting-app
  labels:
    name: it-consulting-app
