k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-consulting-webapp-service
  namespace: it-consulting-app
  labels:
    app: it-consulting-webapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: it-consulting-webapp
